# jirawt

./: .eslintignore  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  main.rs  utils.rs
src-tauri/src/commands/: add_profile.rs  fetch_boards.rs  fetch_sprints.rs  fetch_worklogs.rs  get_profiles.rs  mod.rs  select_profile.rs
src-tauri/src/dtos/: add_profile.rs  mod.rs  myself.rs
src-tauri/src/entity/: mod.rs  profile_entity.rs
src-tauri/src/errors/: command_error.rs  field_error.rs  mod.rs
src-tauri/src/infrastructures/: cipher.rs  database.rs  hashing.rs  mod.rs
src-tauri/src/services/: authenticate_profile.rs  mod.rs
src-tauri/src/states/: mod.rs  profile_state.rs
src/atoms/: board.tsx
src/components/: back-button.tsx  modal-title.tsx  selectable-card.tsx  visibility-toggle-icon.tsx
src/components/icons/: add.tsx  alert-circle.tsx  arrow-back-outline.tsx  arrow-forward-circle.tsx  caret-forward-outline.tsx  easel.tsx  eye-off.tsx  eye.tsx  lock-closed.tsx  person-add.tsx  person.tsx
src/constants/: commands.ts
src/dtos/: add-profile.ts  board.ts  profile.ts  sprint.ts  worklog.ts
src/errors/: critical-error.ts  form-error.ts  unauthorized-error.ts
src/hooks/: use-unauthorized-handler.ts
src/screens/: index.tsx  with-initial-loading-list.tsx
src/screens/entry/: index.tsx
src/utils/: color.ts  filter.ts  helper.ts  notification.tsx  sort.ts
(+13 files in other folders)
