[package]
name = "jirawt"
version = "0.0.0"
description = "A small application for Jira worklogs tracking"
authors = ["phandungtri"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.0", features = [] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
chrono = "0.4.34"
reqwest = { version = "0.11.24", features = ["json"] }
futures = "0.3.30"
sled = "0.34.7"
bincode = "1.3.3"
sha2 = "0.10.8"
nanoid = "0.4.0"
pbkdf2 = "0.12.2"
aes-gcm = "0.10.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
